--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
-        // 添加下面两行代码即可。
-        classpath 'com.novoda:bintray-release:0.3.4'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        // 添加下面代码即可。
+//        classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
 
