--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    compile 'com.liubgit:liub-like:1.0.0'
+//        compile 'com.liubgit:liub-like:1.0.0'
     compile project(':xrefresh_library')
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.jakewharton:butterknife:8.7.0'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile files('libs/facedetection.jar')
+    compile project(':mylibrary_ui')
 }
